# PEG-MLIR-Calc

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: build(AMD64).yml  build(AMD64-LLVM19).yml  build(ARM64).yml  build.yml
cpp-peglib/: CMakeLists.txt
cpp-peglib/mlir/: CMakeLists.txt  LowerToLLVM.cpp  Passes.h  arith.cpp  arith.h  arith_general_simd.cpp  arith_no_simd.cpp  calc.cc
test/: add.sh  mul.sh  print.ll  simd_add.sh  test-all.sh
